# threewinchecker

./: .gitignore  LICENSE  README.md  threewinchecker.cabal
app/: Checker.hs  Scraper.hs
src/: Lib.hs  ScraperLib.hs
test/: LibTest.hs  QQ.hs  ScraperLibTest.hs  Spec.hs
