name:                threewinchecker
version:             1.0.0.0
synopsis:            Tools for checking the three win hypothesis
description:         Please see README.md
homepage:            http://github.com/gregorias/threewinchecker#readme
license:             GPL-3
license-file:        LICENSE
author:              Grzegorz Milka
maintainer:          grzegorzmilka@gmail.com
copyright:           2015 Grzegorz Milka
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       Lib
                     , ScraperLib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec == 0.12.*
                     , bytestring == 0.10.*
                     , cassava == 0.4.*
                     , curl == 1.*
                     , scalpel == 0.2.*
                     , transformers == 0.4.*
                     , vector == 0.10.*
  default-language:    Haskell2010
  ghc-options:         -Wall

executable checker
  hs-source-dirs:      app
  main-is:             Checker.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring == 0.10.*
                     , cassava == 0.4.*
                     , threewinchecker
                     , vector == 0.10.*
  default-language:    Haskell2010

executable scraper
  hs-source-dirs:      app
  main-is:             Scraper.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring == 0.10.*
                     , cassava == 0.4.*
                     , threewinchecker
  default-language:    Haskell2010

test-suite threewinchecker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibTest
                     , QQ
                     , ScraperLibTest
  build-depends:       base
                     , HUnit == 1.2.*
                     , scalpel == 0.2.*
                     , template-haskell == 2.10.*
                     , threewinchecker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-extensions:  QuasiQuotes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gregorias/threewinchecker
